シェルとロケールと文字コード

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -1,1 +1,57 @@
 # 10.必須システムサービス
+
+---
+
+## システムクロックの設定
+
+---
+
+## システムログの設定
+
+---
+
+## メール管理
+
+---
+
+## プリンタ管理
+
+---
+
+## 小豆本問題
+
+---
+
+### 1
+
+---
+
+### 2
+
+---
+
+### 3
+
+---
+
+### 4
+
+---
+
+### 5
+
+---
+
+### 6
+
+---
+
+### 7
+
+---
+
+### 8
+
+---
+
+### 9
