--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -164,3 +164,51 @@ car [オプション] ファイル1 ファイル2 ...
 
 他にも色々。101で出たのは-nだけ。
 ```
+
+---
+
+## ヒアドキュメント  
+
+第3章、GNUとUNIXコマンドの内容。  
+
+`コマンド << 終了文字` :: 終了文字が現れるまで標準入力へ送る  
+
+``` bash
+echo 'hoge'
+echo 'fuga'
+echo 'piyo'
+```
+
+``` bash
+cat << EOS
+hoge
+fuga
+piyo
+EOS
+```
+
+---
+
+## ブロックデバイスファイル  
+
+前提としてデバイスファイルである事。  
+アクセス時に文字単位ではなく、ブロック単位でデータを転送するものを「ブロックデバイス」と呼ぶ。  
+ハードディスクドライブやUSB,CR-ROM,メモリ領域などのデバイスファイルはこのように呼ばれるらしい。  
+
+---
+
+## bash
+
+多くのUNIX系OSで標準的に用いられるシェルプログラムの1つ。  
+shをパワーアップしたシェル。  
+正式名称は`Bourne Again Shell`  
+Bourne AgainはBorn Again(新生)と作成者のBourneとを掛け合わせた物らしい。  
+
+シェルは利用者からOSへの操作の受付や操作の実行結果の表示等を担うプログラム。  
+
+## sh
+
+Bourneシェル。  
+bashの前身。  
+Stephen Bourne（スティーブ・ボーン）氏が1977年に開発した。  
+ゆえにBourneシェル  
