--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -1,2 +1,135 @@
 # 9.管理タスク
 
+- ユーザー/グループの作成、変更、削除  
+- ホームディレクトリのひな形の作成  
+- cronとsystemdのタイマーUnitを使った定期的なジョブスケジューリング  
+- atを使ったジョブの予約と確認、削除  
+- cronとatの利用制限  
+- ロケールの設定と確認  
+- 文字コードの変換  
+- タイムゾーンの設定  
+
+---
+
+## ユーザーとグループの管理
+
+---
+
+## ジョブスケジューリング
+
+---
+
+## ローカライゼーションと国際化
+
+### ローカライゼーション(localization)
+
+言語や通過単位、日付の書式等を地域や国に合わせる事  
+
+### 国際化(internationalization : i18n)
+
+ローカライゼーションを国ごとに行うのは大変なので、多くのソフトウェアでは最初から多言語・他地域に対応するように作られている。  
+
+### ロケール
+
+利用者の地域情報  
+
+ロケールの主なカテゴリ  
+LC_CTYPE ::  文字の種類やその比較・分類の規定  
+LC_COLLATE :: 文字の照合や整列に関する規定  
+LC_MESSAGES :: メッセージ表示に使用する言語  
+LC_MONETARY :: 通貨に関する規定  
+LC_NUMERIC :: 数値の書式に関する規定  
+LC_TIME :: 日付や時刻の書式に関する規定  
+LC_ALL :: ロケールの環境変数すべて  
+
+環境変数LC_ALLが設定されていれば、全てのカテゴリで必ずその値が使われる。  
+環境変数LANGが設定されていれば、全てのカテゴリで必ずその値が使われるが、個々のカテゴリ毎に個別の設定が可能。  
+
+### localeコマンド
+
+現在のロケールの設定を確認するコマンド  
+
+``` txt
+構文 :: locale [オプション] ユーザー名
+
+オプション
+-a :: 設定できるロケールを全て表示
+-m :: 利用できる文字コードを全て表示
+```
+
+ロケール名の書式 :: 言語名_国家もしくは地域名.文字コード  
+
+主なロケール名  
+C,POSIX :: 英語  
+ja_JP.utf8 :: 日本語/Unicode  
+ja_JP.eucJP :: 日本語/EUC-JP  
+ja_JP.ShiftJIS :: 日本語/シフトJIS
+en_US.utf8 :: 英語(米)/Unicode
+
+ロケールの環境変数の全てをja_JP.utf8にする例  
+`export LC_ALL=ja_JP.utf8`  
+
+### 文字コード
+
+ASCII :: 7ビットで表される基本的な128種類の文字(英数字+α)  
+ISO-8859 :: ASCIIを拡張した8ビットの文字コードで256種類の文字  
+UTF-8 :: Unicodeを使った文字コードで、1文字を1バイトから6バイトで表す  
+日本語EUC(EUC-JP) :: UNIX環境で標準的に利用されていた日本語の文字コード  
+ShiftJIS :: Windowsで利用される日本語の文字コード  
+ISO-2022-JP :: 電子メールなどで利用される日本語の文字コード(JISコード)  
+
+### iconvコマンド
+
+文字コードを変換するコマンド  
+
+``` txt
+書式 :: iconv [オプション] [入力ファイル名]
+
+オプション
+-f 入力文字コード :: 返還前の文字コードを指定する
+-t 出力文字コード :: 変換して出力したい文字コードを指定する 
+-l :: 扱える文字コードを表示する  
+```
+
+日本語EUC(EUC-JP)で作成されたファイルreport.euc.txtをUTF-8に変換してreport.utf8.txtとして保存する例。  
+`iconv -f eucjp -t utf8 report.euc.txt > report./.utf8.txt`  
+
+---
+
+## 小豆本問題
+
+---
+
+### 1
+
+---
+
+### 2
+
+---
+
+### 3
+
+---
+
+### 4
+
+---
+
+### 5
+
+---
+
+### 6
+
+---
+
+### 7
+
+---
+
+### 8
+
+---
+
+### 9
