アジャイル

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -61,6 +61,29 @@ export [オプション] [変数名[=値]…]
 
 システム起動時のサービス起動デーモンsystemdのコントロール用コマンド  
 
+サービス起動 :: systemctl start ${Unit}  
+サービス停止 :: systemctl stop ${Unit}  
+サービス再起動 :: systemctl restart ${Unit}  
+サービスリロード :: systemctl reload ${Unit}  
+サービスステータス表示 :: systemctl status ${Unit}  
+サービス自動起動有効 :: systemctl enable ${Unit}  
+サービス自動起動無効 :: systemctl disable ${Unit}  
+サービス自動起動設定確認 :: systemctl is-enabled ${Unit}  
+サービス一覧 :: systemctl list-unit-files --type=service  
+設定ファイルの再読込 :: systemctl daemon-reload  
+
+sudo systemctl restart httpd
+サービス起動
+sudo systemctl start dotnetcorewebOES.service
+サービス起動自動起動有効
+sudo systemctl enable dotnetcorewebOES.service
+サービス停止
+sudo systemctl stop dotnetcorewebOES.service
+サービス再起動
+sudo systemctl restart dotnetcorewebOES.service
+サービスステータス確認
+sudo systemctl status dotnetcorewebOES.service
+
 ---
 
 ## ナイス値
