意味がない

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -507,3 +507,31 @@ Unicode「しゃーない!!!使われてない2つの領域があるから、そ
 ---
 
 ## 雑記
+
+Notionを入れてみた。
+まだ何とも言えない。
+エバーノートからのエクスポートがない。
+
+
+キーリングは案外いい感じである。
+つけているうちにいい方法も思いつくだろう。
+仮に使わなくなっても、ケーブルを保持したり、使いようはいろいろありそう。
+まぁ、100均でもいい感じなのは否めないが。
+
+
+朝の内にメトレフランセを撮影。
+昼休みに出品しよう。
+天気よかったから散歩した。
+トイレに籠っている時間を利用して出品完了。
+
+
+9時まで寝たけど7時起きがデフォルトなので、目が覚めてしまった。
+でも、かなりましな状態になったので睡眠大事。
+頭のふわふわはもう大丈夫。
+ほとんど意識する必要がなくなった。
+
+
+12月なのに雪が全然ない。
+暖かい。
+
+
