アカウント周り、Vue用語

--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -133,10 +133,25 @@ SUIDが設定されているファイルを検索するコマンド
 
 ユーザーのパスワードの有効期限を表示・変更するコマンド。  
 引数を設定しないで実行した場合、対話モードになる。  
+9.管理タスクのパスワードに置ける問題でも頻出。  
 
 ``` txt
 chage [オプション] [ユーザー名]
+
+-l :: アカウントとパスワードの失効日の情報を表示。一般ユーザーでも使用可能。
+-d :: パスワードの最終更新日を設定。YYYY-MM-DDの形式もしくは1970年1月1日からの日数で指定する。
+-m :: パスワード変更間隔の最短日数を設定。
+-M :: パスワードを変更なしで使用できる最長日数を設定。
+-W :: パスワードの変更期限の何日前から警告を出すかを指定。
+-I :: パスワードの変更期限を過ぎてからアカウントが使用できなくなるまでの失効日数。
+-E :: アカウントの失効日を設定。
 ```
+
+ユーザーryoのパスワードの有効期限を60日に設定する。  
+`change -M 60 ryo`  
+
+期限を過ぎてから無効になるまでにパスワードを変更できる期間を30日に設定する。  
+`change -I 30 ryo`  
 
 ### /etc/nologinファイル
 
