--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -13,7 +13,11 @@
 
 ## ユーザーとグループの管理
 
-### 101の復習
+### /etc/passwd
+
+/etc/shadowファイルを使っているか否かに関わらず、/etc/passwdの第2フィールドに`*`あるいは`!`を指定すると、  
+PAMの認証モジュールpam_unix.50は/etc/shadowの参照や暗号化パスワードとしての処理をせず、その時点でログインを拒否する。  
+ログイン時に表示されるメッセージはパスワードを間違えた時と同じになる。  
 
 ### useraddコマンド
 
@@ -58,6 +62,8 @@ usermod [オプション] ユーザー名
 -s パス :: デフォルトシェルを変更する。
 -L :: パスワードをロックして一時的に無効化する。
 -U :: パスワードのロックを解除する。
+-e :: アカウントの失効日を設定する。changeコマンドと同じ。
+-f :: パスワード失効までの猶予日数を設定する。
 ```
 
 ユーザーlpicがプライマリグループ以外に所属するグループをbprojectに変更する。  
@@ -65,6 +71,9 @@ usermod [オプション] ユーザー名
 
 ユーザーlpicのアカウントを無効にする。  
 `usermod -L lpic`  
+
+manaのパスワードが有効期限を過ぎてから無効になるまでの期間を30日に設定する。  
+`usermod -f 30 mana`  
 
 ### userdelコマンド
 
@@ -84,6 +93,8 @@ userdel [オプション] ユーザー名
 
 パスワードを変更するコマンド。  
 スーパーユーザー以外は自分のパスワードだけを変更できる。  
+passwdを単独で実行すると自分自身のパスワードを変更できる。  
+現在のパスワードを入力したのち、新しいパスワードを確認のため2回入力する。  
 
 ``` txt
 1. passwd
@@ -92,10 +103,15 @@ userdel [オプション] ユーザー名
 オプション
 -l :: パスワードをロックして一時的に無効化する。
 -u :: パスワードのロックを解除する。
+-x :: パスワードが変更なしで有効な最長日数を設定する。
+-i :: パスワード失効までの猶予日数を設定する。
 ```
 
-passwdを単独で実行すると自分自身のパスワードを変更できる。  
-現在のパスワードを入力したのち、新しいパスワードを確認のため2回入力する。  
+yukoのパスワードの有効期限を60日に設定する。  
+`passwd -x 60 yuko`  
+
+期限を過ぎてから無効になるまでにパスワードを変更できる期間を30日に設定する。  
+`passwd -i 30 yuko`  
 
 ### groupaddコマンド
 
@@ -146,18 +162,32 @@ salesグループを削除する。
 id [ユーザー名]
 ```
 
+### groupsコマンド
+
+ユーザーが所属しているグループを表示するコマンド。  
+
+``` txt
+groups
+
+グループ名：グループのパスワード：グループID番号：所属するユーザー名のリスト
+```
+
 ### getentコマンド
 
 ローカルホストやLDAPサーバーなどにあるユーザー情報、グループ情報などを一括して出力することができる。  
+ネームサービススイッチ(/etc/nsswitch.conf)の設定に従い、引数で指定したデータベースの内容を表示する。  
 
 ``` txt
 getent 対象
+getent データベース名 キー名
 
 対象
 ユーザー情報→passwd
 グループ情報→group
 をそれぞれ指定する。
 ```
+
+getent passwd を実行した場合、システムの全ユーザーのアカウントが表示される。  
 
 ### シャドウパスワード
 
@@ -378,6 +408,7 @@ LC_ALL :: ロケールの環境変数すべて
 ### localeコマンド
 
 現在のロケールの設定を確認するコマンド  
+引数なしで実行した場合、システムに設定されているロケールが表示される。  
 
 ``` txt
 構文 :: locale [オプション] ユーザー名
@@ -393,8 +424,8 @@ LC_ALL :: ロケールの環境変数すべて
 C,POSIX :: 英語  
 ja_JP.utf8 :: 日本語/Unicode  
 ja_JP.eucJP :: 日本語/EUC-JP  
-ja_JP.ShiftJIS :: 日本語/シフトJIS
-en_US.utf8 :: 英語(米)/Unicode
+ja_JP.ShiftJIS :: 日本語/シフトJIS  
+en_US.utf8 :: 英語(米)/Unicode  
 
 ロケールの環境変数の全てをja_JP.utf8にする例  
 `export LC_ALL=ja_JP.utf8`  
@@ -465,36 +496,135 @@ iconv [オプション] [入力ファイル名]
 
 ---
 
-### 1
+### 1 ×
+
+ユーザーアカウント[jupiter]を新しく作成したい。  
+ホームディレクトリは[/home/plane]、デフォルトシェルは[/bin/zsh]として作成する場合のコマンド
+
+→  
+× `useradd -m /home/planet -s /bin/zsh jupiter`  
+○ `useradd -d /home/planet -s /bin/zsh jupiter`  
+
+ホームディレクトリの指定は-dでした。  
+-mはホームディレクトリを自動的に生成するオプションです。  
+でも、全体的にいい線は言っていたのではないでしょうか。  
 
 ---
 
-### 2
+### 2 ×
+
+ユーザーuser07は現在group07とgroup08の2つのグループに所属している。  
+更に既存のグループgroup09にも所属させたい場合、実行すべきコマンドは？  
+
+→  
+-gか-Gか。  
+どちらかはメインを変更せず、追加するだけだった気がする。  
+最後にユーザーを指定する構文なので、選択肢的に`usermod -g group09 user07`しかないなぁ。  
+
+→  
+まさかの選択肢C`usermod -G group07,group08,group09 user07`だった。  
+[-G]はプライマリグループは変更しないで所属するグループを変更するオプションだった。  
+複数のグループにいる状態で更に追加したい場合は、今いるグループもすべて記述しないといけないっぽい。  
 
 ---
 
-### 3
+### 3 ○
+
+ユーザーアカウントsaturnを削除すると同時に、そのユーザーが使っていたホームディレクトリも削除したい。  
+適切なオプションとコマンドを記述せよ。  
+
+→  
+`userdel -r saturn`  
+
+これはあたり。  
+削除はremoveっぽいので-rで正解。  
+ホームディレクトリの引数は特に必要ない。  
 
 ---
 
-### 4
+### 4 ×
+
+ユーザーを新規に作成する際、新たに作成されるホームディレクトリの中に、デフォルトで必要とされるいくつかのファイルをコピーする必要がある。  
+ユーザーの作成と同時に自動的にそれらのファイルがユーザーのホームディレクトリ内にコピーされるようにするには、ひな形となるファイルをどのディレクトリに配置すれば良いか？  
+ディレクトリ名を絶対パスで記述せよ。  
+
+→  
+`/etc/skld`  
+
+あー。おしい。
+sk~~なんだっけ？ってところまではいい線言ってた。  
+
+skelの意味はどうやらskeltonという意味らしい。  
+skeltonは骸骨のイメージがあるが、それ以外にも骨組みや必要最小限という意味もあるみたいね。  
 
 ---
 
-### 5
+### 5 ○
+
+crontabコマンドを用いて、毎月10日の午後5時10分に/home/myhome/myscriptが実行されるように死体。  
+
+→  
+D. `10 17 10 * * /home/myhome/myscript`  
+
+当たった。  
+秒は指定出来ず、分から徐々に大きくなって行くのは覚えていた。  
+月まではいいとして、最後は曜日だったか？  
+うん、曜日だった。  
 
 ---
 
-### 6
+### 6 ×
+
+atコマンドを利用しようとしている。  
+/etc/at.allowファイルは存在せず、/etc/at.denyファイルは存在下が、中には何も記述されていない。  
+この時の説明は？すべて選択。  
+
+→  
+B. rootユーザーだけが使える。  
+
+それ以外にもA. すべての一般ユーザーはatコマンドを利用できる も正解らしい。  
+あれ？そうだったっけ？  
+あー。すべてのファイルがない場合の話だ。  
+denyがあって何も記述が無かったら、確かに全員使えるわな。  
 
 ---
 
 ### 7
 
+日付や時刻の表記を規定する変数  
+
+→  
+あれー。何だっけ。  
+普通に考えて`LC_FORMAT`  
+
+はい。`LC_TIME`だそうです。  
+LC_FORMATなるものは存在しません。  
+
 ---
 
-### 8
+### 8 ○  
+
+システムに設定されているロケールを表示するコマンド  
+
+→  
+locale  
+
+まぁ、ロケール言ってるんだからこれしかないよね。  
+引数なしでlocaleコマンドを実行すると、システムに設定されているロケールが表示されるらしい。  
 
 ---
 
-### 9
+### 9 ○
+
+タイムゾーンを日本に設定しようとしている。下線部に当てはまるコマンド。  
+`# ___ -s /usr/share/zoneinfo/Asia/Tokyo /etc/localtime`  
+
+→  
+忘れた。環境変数はTZと覚えているのだが。  
+タイムゾーンだから普通にtimezoneってやりたいけどそんなコマンドあったっけ？  
+いや、違う。シンボリックリンクを通すかコピーするかって話だった気がする。
+だったらリンクを作るコマンドなので `ln`か？  
+
+いやー、覚えてるもんだね。  
+因みにタイムゾーンを設定するコマンドはlocaltimeだそうです。  
+全然覚えてない。  
