勉強リスト追加

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -501,6 +501,41 @@ groupbyに条件指定可能。
 ```
 
 
+感覚3と指定した場合、
+012
+345
+678
+
+間隔5を指定した場合、
+0 1 2 3 4
+5 6 7 8 9
+10 11 12 13 14
+
+を生成してくれるスマートな一文はないものか。
+次いでだから
+null
+0,1,2,3,4,
+5,6,7,8,9
+みたいな感じがいいかな。
+
+スマートじゃないけどこんなのしか思いつかなかった。
+
+``` C# : from to の一覧
+
+var from = 0
+for (var i = 0; i < 150; i += kankaku){
+    var to = i;
+
+    // ここの間は0,1,2,3,4  5,6,7,8,9 になってる。
+
+    from += i + 1;
+}
+```
+
+<https://qiita.com/Nossa/items/db9bff2390291432d138>  
+<https://ichiroku11.hatenablog.jp/entry/2015/04/16/230309>  
+
+
 ---
 
 ## 現在進行形
