group by の動作確認

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -59,7 +59,7 @@ export [オプション] [変数名[=値]…]
 
 ## systemctlコマンド  
 
-システム起動時のサービス起動デーモンsystemdのコントロール用コマンド  
+サービス起動デーモンsystemdのコントロール用コマンド  
 
 サービス起動 :: systemctl start ${Unit}  
 サービス停止 :: systemctl stop ${Unit}  
