--- a/BookKeeping/用語など.md
+++ b/BookKeeping/用語など.md
@@ -227,3 +227,14 @@ ECOの収入原簿印刷のアレ。
 簿記で記録された内容を基に色々考えるのが会計らしい。  
 
 まぁ、似たようなことであるのはわかった。  
+
+---
+
+## 可処分所得(disposable income)
+
+給与やボーナス等の個人所得から、税金や社会保険料などを差し引いた手取りの収入。  
+自分の意志で使える部分の金額の事。  
+
+個人の家系収入から、支払いを義務ずけられている税金や社会保険料等の非消費支出を察し引いた金額の事。  
+
+・dispose : 処分する。使い捨て  
