--- a/LPIC/102/10.必須システムサービス_問題.md
+++ b/LPIC/102/10.必須システムサービス_問題.md
@@ -2,79 +2,196 @@
 
 ---
 
-## 1
+## 1 ○
+
+決められた時刻に定期的に特定のコマンドを実行させるためのコマンドは何か？  
+
+→  
+crontab  
+
+cronと応えそうになるが、それは実行してくれるプログラムの名前であることに注意。  
 
 ---
 
-## 1
+## 2 ×
+
+システムのログのローテーションや不要なファイルの削除など、保守のためのコマンドが/etc/cron.daily,/etc/cron.weekly,/etc/cron.monthlyディレクトリ以下に置かれている。  
+このコマンドを定期的に実行するプログラムはどれか？  
+
+→  
+直近の問題でシステム系の定期実行はcronから起動されるanacronが担当するって書いてあったのでそれが正解。  
+anacronが問題文のディレクトリ以下に置かれているか同課は不明。  
+
+C. anacron  
+
+→  
+解説の量がやばいので飛ばす。  
 
 ---
 
-## 1
+## 3 ○
+
+コマンドを定期的に実行するためにcrontabの設定を行う場合、実行するコマンドを必要なオプションも付けて記述してください。  
+
+→  
+crontab -e  
+
+おーすごい。  
+なぜか覚えてた。  
+
+因みに-lが表示で-rが削除。  
+
+ユーザーのcrontabファイルは/var/spool/cronディレクトリの下にユーザー名のファイルとして作成される。  
 
 ---
 
-## 1
+## 4 ○
+
+cron機能を利用してcommandを毎日1回夜中の午前1時に実行する場合、crontabの記述で正しいものを1つ選択してくださお。  
+
+→  
+B. `0 1 * * * command`  
+
+分、時、日、月、曜日、コマンド  
+曜日の間があいまいなので覚えましょう。  
+答えは月です。  
 
 ---
 
-## 1
+## 5 ○
+
+毎週月曜から木曜のPM3:00からPM5:00の間の毎時0分に、プログラム/usr/local/bin/cleanupを実行する場合、正しいものを1つ選択。  
+
+→  
+crontabの話なのかな？  
+だとしたら書式的にBしかあり得ない。  
+
+B. `0 15-17 * * 1-4 /usr/local/bin/cleanup`  
 
 ---
 
-## 1
+## 6 ○
+
+crontabの説明で正しいものはどれか？2つ。  
+
+→  
+B. crontab設定ファイルのエントリで間隔を指定する場合は「*/間隔」と記述する。  
+C. ユーザーのcrontabファイルは/var/spool/cronディレクトリの下にユーザー名のファイルとして作成される。  
 
 ---
 
-## 1
+## 7 ×
+
+ユーザーがcrontabコマンドを実行しようとしたところ権限がありませんでした。  
+ある設定ファイルからそのユーザー名を削除することによって実行できるようにしたい場合、変更すべきファイル名を絶対パスで記述。  
+
+→  
+なんだろう全然わかんない。  
+
+あー。allowとdenyか。
+atでやったな。cronも、もちろんあるか。
+
+/etc/cron.deny  
 
 ---
 
-## 1
+## 8 ○
+
+crontabの各エントリの最後の文字は何か？1つ。  
+
+→  
+B. 改行  
+
+当たってた。サンプルを何点か書いたけど、何か特別な記号を書いた覚えがなかったので1行は改行で区切るものとしてみた。  
 
 ---
 
-## 1
+## 9 ○
+
+指定したコマンドを1回だけ実行するように設定するコマンドはどれか？2つ。  
+
+→  
+A. at  
+C. batch  
+
+atはわかるがbatchって何だ。  
+
+### batchコマンド
+
+システムの負荷が低くなった時に指定したコマンドを1回だけ実行するコマンド。  
+システムの負荷が低くなるまで実行を待ち、システムの負荷が低くなるとatdデーモンによって実行される。
+
+``` txt
+batch [オプション]
+
+atコマンドのオプションが使える。
+```
 
 ---
 
-## 1
+## 10 ×
+
+atコマンドの説明で正しいmのはどれか？2つ。  
+
+→  
+A,Cで。  
+
+すげ。全部外した。  
+
+実行待ちのキューに入れられたジョブを削除する :: atrmコマンド or at -d  
+実行待ちのキューに入っているジョブを表示する :: atqコマンド or at -l  
 
 ---
 
-## 1
+## 11
+
+特定のユーザーのatコマンドとbatchコマンドの使用を禁止したい場合、禁止するユーザーを追加して編集するファイルの名前を絶対パスで記述せよ。  
+
+→  
+/etc/at.deny  
+
+---
+---
+
+ここまでが9.管理タスクと10.必須システムサービスの境目  
+
+---
+---
+
+## 12
+
+systemdのタイマーを利用してtimer-test.serciveを実行したいと考えている。  
+タイマーユニットの設定ファイルの記述で正しいものはどれか？2つ。  
+
+→  
 
 ---
 
-## 1
+## 13
 
 ---
 
-## 1
+## 14
 
 ---
 
-## 1
+## 15
 
 ---
 
-## 1
+## 16
 
 ---
 
-## 1
+## 17
 
 ---
 
-## 1
+## 18
 
 ---
 
-## 1
-
----
-
-## 1
+## 19
 
 ---
 
