--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -207,6 +207,12 @@ DAEMONとも呼ばれる。
 定期的にジョブを実行するcronはスケジュールを管理するデーモンである**crond**と、スケジューリングを編集する**crontabコマンド**から構成される。  
 crondデーモンは1分ごとにcrontabファイルを調べて実行すべきスケジュールが存在すればそのジョブを実行する。  
 
+crondデーモン  
+RedHat系 :: /usr/sbin/crond  
+Debian系 :: /usr/sbin/cron  
+
+システム保守のためのコマンドの定期実行はcronから起動されるanacronによって行われる。  
+
 ### crontabコマンド
 
 コマンドの定時実行のスケジュール管理を行うために用いられるコマンド。  
