--- a/Vue.js/用語.md
+++ b/Vue.js/用語.md
@@ -2,10 +2,7 @@
 
 開発に置いて調べた用語等をとにかくまとる。  
 
-<https://reffect.co.jp/vue/finally-understand-vue-cli#i>  
-<https://codezine.jp/article/detail/14896?p=2>  
 <https://qiita.com/shibukawa/items/0a1aaf689d5183c6e0f1>  
-
 <https://qiita.com/hshota28/items/765cf903f055754f7557>  
 <https://qiita.com/watataku8911/items/453c1d757c99ad2d5fb2>  
 <https://qiita.com/ksh-fthr/items/a4ac1d04d9923c550cd7>  
@@ -250,3 +247,28 @@ bundle.jsってのにまとめられるっぽい。
 cssファイルが増えて大変だから1つにまとめたい!  
 lessをcssにコンパイルしたい!  
 とかをJavascriptの記述でタスク化できる。  
+
+## npm iとnpm ci
+
+["npm install"と "npm ci"の違いは何ですか？](https://www.webdevqa.jp.net/ja/npm/npm-install%E3%81%A8-npm-ci%E3%81%AE%E9%81%95%E3%81%84%E3%81%AF%E4%BD%95%E3%81%A7%E3%81%99%E3%81%8B%EF%BC%9F/807196109/)  
+[npm よく使うコマンドまとめ](https://qiita.com/standard-software/items/2ac49a409688733c90e7)  
+
+`npm install`  
+`npm i`  
+
+package.jsonの内容に従ってインストールするコマンド。  
+既にpackage.jsonの中身にインストールすべきパッケージ名がかかれている場合に使うので、環境移行の時に使うコマンド。  
+但し、このコマンドではpackage.jsonとpackage-lock.jsonを上書きしてしまいフォーマットが崩れたり、
+あるいは何らかの理由(nodeやnpmのバージョンが移行環境で異なっている場合など)により、  
+package-lock.jsonが更新され、node_modulesフォルダ内のモジュールが完全一致しない事がある。  
+
+なので、package.jsonとpackage-lock.jsonを更新せずにnode_moduleを完全復帰させたい場合は、clean installを行うほうが安全。  
+`npm ci`  
+
+## package.jsonファイル
+
+package.jsonファイルはプロジェクトに関する情報が記述されているファイル。  
+Vue.jsのみで利用するファイルではなくnpmコマンドでライブラリを管理する際に必須となるファイルでインストールしたライブラリのバージョン情報等も記述されています。  
+新たにnpmコマンドでライブラリを追加した場合はここに追加されることになります。  
+dependenciesとdevDependenciesに別れていますが、dependenciesに記述されているライブラリは本番環境でも利用するライブラリです。  
+devDependenciesに記述されているライブラリは開発時に利用するライブラリで本番環境では利用されません。  
