細かいの追加

--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -286,6 +286,9 @@ https://ja.wikipedia.org/wiki/%E5%90%8D%E8%A9%9E
 fix fixed
 https://jp.blog.voicetube.com/phrases/fixed/
 
+c# object object 違い  
+[C#のStringとstring、Int32とint 違いは・・・ない！](https://araramistudio.jimdo.com/2019/03/06/c-%E3%81%AEstring%E3%81%A8string-int32%E3%81%A8int-%E9%81%95%E3%81%84%E3%81%AF-%E3%81%AA%E3%81%84/)
+
 ---
 
 ## 現在進行形
