--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -195,6 +195,101 @@ quit :: 対話状態を終了する。
 
 ## システムログの設定
 
+Linuxでは、**syslog**と呼ばれるプログラムを使用することによってLinuxで発生する各種イベントをログファイルに出力したりコンソールに出力することが可能となります。  
+syslogのプログラムは、**syslogd**というデーモンにより実行される。  
+syslogは他のプログラムからのメッセージを受信して、出力元や優先度に従って分類を行って、syslogで定義した出力先に送信する。  
+
+### syslog,rsyslog
+
+CentOS6以降のディストリビューションではrsyslogが採用されている場合がある。  
+rsyslogは各種機能をプラグインモジュールで拡張できるようになっている。  
+ログの出力方式などは/etc/syslog.confファイルの書式とほぼ同じ。  
+linucイージスではsyslog,小豆本ではrsyslogを解説しているのでどちらもまとめる。  
+
+syslogの設定  
+`/etc/syslog.conf`設定ファイルで行う。  
+
+rsyslogの設定  
+`/etc/rsyslog.conf`設定ファイル or `etc/rsyslog.d`設定ディレクトリで行う。  
+
+### /etc/rsyslog.conf
+
+rsyslog.confファイルは「モジュール設定部分」「グルーバル設定部分」「ルール設定部分」が主たる設定項目になる。  
+`#`で始まる行はコメント行。  
+
+モジュールプラグインのデフォルトは[imuxsock] [imklog]のみ有効になっている。  
+
+``` txt : rsyslogの主なプラグインモジュール
+imuxsock :: UNIXソケットによるローカルロギングサポート(loggerコマンドなど)
+imjournal :: systemdのジャーナルサポート
+imklog :: カーネルログのサポート
+immark :: マークを出力(--MARK--)
+imudp :: UDPでメッセージを受信
+imtcp :: TCPでメッセージを受信
+```
+
+どのようなメッセージをどこに出力するか？といった設定はルール設定部分および、/etc/rsyslog.dディレクトリ以下の～.confファイルで設定する。  
+
+rsyslog.confファイルの書式 :: `ファシリティ.プライオリティ 出力先`  
+
+### ファシリティ
+
+メッセージの生成元を表す。  
+具体的にはカーネルや実行中のプロセス。  
+[*]を使うとすべてのファシリティを選択できる。  
+
+``` txt : ファシリティ
+auth,authpriv :: 認証システム(loginなど)による出力
+cron :: cronによる出力
+deamon :: 各種デーモンによる出力
+kern :: カーネルによる出力
+lpr :: 印刷システムによる出力
+mail :: メールサービス関連による出力
+user :: ユーザーアプリケーションによる出力
+local0~local7 :: ローカルシステムの設定
+```
+
+### プライオリティ
+
+メッセージの重要度を表す。  
+低く設定すればするほど、ログとして出力される情報量も多くなる。
+[*]を使うとすべてのプライオリティを選択できる。  
+noneだけは例外で、指定されたファシリティのログを除外する役割を持つ。  
+
+上が一番プライオリティが高い。  
+
+``` txt : プライオリティ
+emerg :: 緊急事態
+alert :: 早急に対処が必要な事態
+crit :: システムの処理は継続できるものの深刻な事態
+err :: 一般的なエラー
+warning :: 一般的な警告
+notice :: 一般的な通知
+info :: 一般的な情報
+debug :: デバッグ情報
+none :: ログを記録しない
+```
+
+### 出力先
+
+出力先として、ログファイルやユーザーの端末、他のホスト等を選択できる。  
+この部分を「アクションフィールド」と言う。  
+
+``` txt : アクションフィールド
+/var/log/messages :: ログファイルに出力
+/dev/tty1 :: コンソール(rrt1)に出力
+/dev/console :: コンソールへの出力
+@sv.example.com :: ホストsv.sxample.comにUDEで出力
+@@sv.example.com :: ホストsv.example.comにTCPで出力
+violet :: ユーザーvioletの端末に出力
+* :: ログイン中のすべてのユーザーの端末に出力
+```
+
+※因みにファシリティとプライオリティを合わせて「セレクタフィールド」という。  
+セレクタフィールドは「;」区切り文字で複数を列挙できる。  
+
+### loggerコマンド
+
 ---
 
 ## メール管理
