--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -246,6 +246,7 @@ kern :: カーネルによる出力
 lpr :: 印刷システムによる出力
 mail :: メールサービス関連による出力
 user :: ユーザーアプリケーションによる出力
+syslog :: syslog機能
 local0~local7 :: ローカルシステムの設定
 ```
 
@@ -256,7 +257,10 @@ local0~local7 :: ローカルシステムの設定
 [*]を使うとすべてのプライオリティを選択できる。  
 noneだけは例外で、指定されたファシリティのログを除外する役割を持つ。  
 
-上が一番プライオリティが高い。  
+emergが最も高く、debugが最も低い。  
+指定したプライオリティよりもレベルが高いものがすべて記録される。  
+critならalertとemergも含まれる。  
+特定のプライオリティを指定したい場合、プライオリティの前に[=]を付ける。  
 
 ``` txt : プライオリティ
 emerg :: 緊急事態
@@ -276,19 +280,80 @@ none :: ログを記録しない
 この部分を「アクションフィールド」と言う。  
 
 ``` txt : アクションフィールド
-/var/log/messages :: ログファイルに出力
+ファイル名 :: ファイルへの出力
+ユーザー名 :: ユーザーの端末への出力
+@ホスト名 :: リモートホストのsyslogへUDPで出力
+@@ホスト名 :: リモートホストのsyslogへTCPで出力
 /dev/tty1 :: コンソール(rrt1)に出力
 /dev/console :: コンソールへの出力
-@sv.example.com :: ホストsv.sxample.comにUDEで出力
+* :: ログイン中のすべてのユーザーの端末に出力
+
+/var/log/messages :: ログファイルに出力
+@sv.example.com :: ホストsv.sxample.comにUDPで出力
 @@sv.example.com :: ホストsv.example.comにTCPで出力
 violet :: ユーザーvioletの端末に出力
-* :: ログイン中のすべてのユーザーの端末に出力
 ```
 
 ※因みにファシリティとプライオリティを合わせて「セレクタフィールド」という。  
 セレクタフィールドは「;」区切り文字で複数を列挙できる。  
 
+### 記述例のオンパレード
+
+crit,alert,emergレベルのメール関連のログを/var/log/mailファイルに記録  
+`mail.crit /var/log/mail`  
+
+critレベルのメール関連のログを/var/log/mailファイルに記録  
+`mail.=crit /var/log/mail`  
+
+errレベル、noticeレベルのメール関連のログを/var/log/mailファイルに記録  
+`mail.=err;mail.=notice /var/log/mail`  
+
+crit,alert,emergレベルのメール関連のログを192.168.0.1の端末に転送  
+`mail.crit @192.168.0.1`  
+
+メールのログを出力しない  
+`mail.none`  
+
+カーネルに関するすべてのメッセージを/var/log/kernelに出力  
+`keln.* /var/log/kernel`  
+
+緊急メッセージは全ユーザーが受け取る  
+`*.emerg *`  
+
 ### loggerコマンド
+
+システムログに記録を追加するコマンド。  
+ログメッセージを生成する事ができるので、syslog.confの設定ファイルが正しく設定されたのかを確認する事ができる。  
+
+``` txt
+logger [-p ファシリティ.プライオリティ] [-t タグ] メッセージ
+```
+
+ファシリティをsyslog,プライオリティをinfoとして「test message」というメッセージを出力  
+`logger -p syslog.info -t TEST "test message"`  
+
+### syslogの一元管理
+
+各Linuxマシンでsyslogによりログを管理できるが、複数のLinuxマシンを運用する場合、syslogは1つのLinuxマシンに集中管理させることが一般的。  
+その場合は、各Linuxマシンのsyslog.confファイルにて、syslogを管理するサーバーをログの出力先として設定する。  
+
+Webサーバー、Mailサーバー、DNSサーバーがあったとして、それらのsyslog.confを`*.* @192.168.0.100`と設定する。  
+syslogサーバーとして192.168.0.100を設定する。外部からのsyslogを受信できるようにUDPポート514番を解放する。  
+
+### systemd-catコマンド
+
+systemdを採用したシステムで使用可能。  
+コマンドの実行結果をジャーナルに書き込む事ができるコマンド。  
+
+``` txt
+systemd-cat コマンド
+```
+
+uptimeコマンドの実行結果をジャーナルに書き込む。  
+`systemd-cat uptime`  
+`sournalctl -xe`を実行する事で結果を確認できる。  
+
+### logの調査方法色々
 
 ---
 
