--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -357,7 +357,181 @@ uptimeコマンドの実行結果をジャーナルに書き込む。
 
 ---
 
-## メール管理
+## メール管理(メールシステム)
+
+### MTA(Mail Transfer Agent)
+
+メールの配送を行うプログラム。  
+メールシステムの中心的役割を担う。  
+DNSサーバーを使用してメールの送信先となるMTAのホスト名を調べる。  
+SMTPプロトコルでメッセージをやり取りするため、SMTPサーバーとも呼ばれる。  
+
+代表的なMTAプログラム  
+Exim,Postfix,Sendmailなど  
+
+### MDA (Mail Delivery Agent)
+
+MTAが受け取ったメールをローカルドメインのユーザーに配信する(メールスプールに格納する)プログラム。  
+
+MTAに対するMDAプログラム  
+
+- Sendmail : procmail(デフォルト)  
+- PostFix : localデーモン  
+- Exim : Exim自身が行う  
+
+### MUA (Mail User Agenet)
+
+ユーザーがメールの送受信に使用するプログラム。  
+
+CUIベース : malix,mutt  
+GUIベース : Thunderbird,Evolution  
+
+### メール配送の仕組み
+
+``` txt
+クライアント  メールサーバー  ネットワーク  メールサーバー  クライアント
+    MUA    →     MTA①          →             MTA②
+                                                 ↓
+                                                 MDA
+                                                 ↓
+                                            メールボックス
+                                                 ↓
+                                              POPサーバー  →    MUA
+```
+
+①メールクライアントソフトウェア(MUA)で作成されたメールは、送信用MTA①へ送られる。  
+②MTA①は、メールアドレスから配送先メールサーバーを調べ、メールをMTA②に配送する。  
+③MTA②がメールを受け取ると、ローカル配送プログラムであるMDAが、メールのさて先となっているユーザーのメールボックスにメールを格納する。  
+④受取人側はPOPサーバーやIMAPサーバーを経由して自分のメールボックスからメールを取り出す。  
+
+### Sendmail,Exim,Postfix
+
+Sendmail : 1981  
+Exim : 1995  
+Postfix : 1998  
+
+Sendmailは標準的なMTAとして長く使われてきたが、最近は使われていない。(さすがに古いし、後継もある)  
+主流はEximとPostfix。  
+SMTPサーバーとして使われる。  
+EximとPostfixはSendmailに互換性がある。  
+
+以下のコマンドとファイルでの設定が有効であるため  
+・sendmailコマンド  
+・newaliasesコマンド  
+・mailqコマンド  
+・~/.forwardファイル  
+
+### ローカルユーザー宛のメールが格納されるディレクトリ
+
+Sendmail : /var/spool/mail  
+Exim : /var/mail  
+Postfix : /var/mail  
+
+### 転送することが出来なかったメールを置くデフォルトのキューディレクトリ
+
+Sendmail : /var/spool/mqueue  
+Exim : /var/spool/exim/input  
+Postfix : /car/spool/postfix/deferred  
+
+### /etc/aliasesファイル
+
+メールアドレスの別名を設定するファイル。  
+例えば、root宛に届いたメールをユーザーadminとlpicでも受け取れるようにするには以下のように設定する。  
+adminとlpicはどちらもrootあてのメールを受け取れるようになるが、rootにはメールが届かなくなる。  
+設定の反映は`newaliases`コマンドで行う。  
+
+``` txt : /etc/aliasesの記述例
+root: admin,lpic
+```
+
+### MTAの起動
+
+### mailコマンド
+
+コマンドラインでメールを受信したり、受信メールを確認したりするコマンド。  
+mailコマンドでユーザー名のみを指定するとローカルシステムのユーザー宛に送信される。  
+-sはタイトル(Subject)を指定するオプション。  
+引数なしでコマンドを実行すると、メールボックスに届いているメールを確認できる。  
+`番号`でその番号のメールを選択。`q`で終了。
+
+``` txt
+mail [-s 題名] [宛先メールアドレス or ユーザー名]
+```
+
+ローカルシステム内のユーザーである「admin」にメールを送信する。  
+
+``` txt
+mail -s TESTMAIL admin
+this is a test e-mail
+.
+```
+
+### sendmailコマンド
+
+メールを送信するコマンド。  
+CUIのMUAであるmalix,muttで利用する。  
+
+``` txt : 実行例
+sendmail yuki@mylpic.com < 送信する本文を格納したファイル
+```
+
+### newaliasesコマンド
+
+メールアドレスの別名を設定するファイルとして、エイリアスファイル(/etc/aliases)とエイリアスデータベースファイル(/etc/aliases.db)がある。  
+このうちの、**エイリアスデータベースファイルを更新するコマンド**。  
+エイリアスデータベースファイルは更新してもすぐには反映されないので、newaliasesコマンドを叩いて変更を反映させる必要がある。  
+因みにエイリアスファイルはSendmail,Postfixの起動時にのみ、読みこまれる。  
+
+エイリアスデータベースファイルがあれば、そちらを参照し、無ければエイリアスファイルが参照される。  
+Eximはエイリアスデータベースファイルを参照しない。  
+newaliasesコマンドは使えるが、それはSendmailとの互換性のためだけ。  
+
+Sendmail,Postfix : エイリアスファイル、エイリアスデータベースファイル  
+Exim : エイリアスファイル  
+
+``` txt
+別名 : 転送アドレス1,転送アドレス2,転送アドレス3
+```
+
+### mailqコマンド
+
+MTAが転送できなかったメールのキューを見るためのコマンド。  
+送信待ちのメールはメールキュー(/var/spool/mqueue)に蓄えられる。  
+全MDA(Sendmail,Postfix,Exim)で使用可能。  
+
+### ~/.forwardファイル
+
+ユーザー受信メールのリダイレクトを行いたい時に設定するファイル。  
+自分のホームディレクトリの下に`.forward`ファイルを作成して、転送先メールアドレスを記述する。  
+一時的にメールを転送したい場合等に便利。  
+ユーザーが各自で設定できるため、管理者が設定する必要はない。  
+
+``` txt : 記述例
+mana@example.com
+mana@mylpic.com
+```
+
+自分宛のメールをmana@example.comとmana@mylpic.comに転送する。  
+
+因みにファイル名やディレクトリが「.(ドット)」から始まるのは隠しファイルや隠しフォルダ。  
+`~/`はホームディレクトリを表す。  
+
+### /var/spool/queue
+
+送信待ちメールの格納先  
+
+### /var/spool/mail
+
+受信待ちメールの格納先  
+
+### オープンリレー
+
+外部からのメールを制限することなく他のドメインに中継する事。  
+そのままではスパムの踏み台にされるので、以下の制限を設定する。  
+①外部からのメールはローカルドメイン宛のメールだけを受け取り、他のドメインへ中継しない。  
+②内部ネットワークからのメールだけを他のドメインに中継する。  
+
+因みに「外部からの名前解決リクエストに対して制限することなく答えを返すこと」をオーブンリゾルバという。  
 
 ---
 
