プリンター

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -537,13 +537,121 @@ mana@mylpic.com
 
 ## プリンタ管理
 
+### CPUS(Common Unix Printing System)
+
+印刷サブシステムらしい。  
+
+・IPP(Internet Printer Protocol)の採用  
+ネットワーク上のプリンタをサポートする印刷プロトコルIPPを採用。  
+
+・PPD(PostScript Printer Description)ファイルのサポート  
+AdobeのPPD形式のファイル(テキストファイル)でデバイスドライバの設定ができる。  
+
+・Webベースで設定可能  
+Webブラウザから設定できるツールが組み込まれている。  
+
+・プリンタクラスのサポート  
+複数のプリンタを1台のプリンタに見せかける機能をサポートしている。  
+
+PPDファイルの格納場所 :: `/etc/cups/ppdディレクトリ以下`  
+CUPSの設定ファイル :: `/etc/cups/cupsd.conf`  
+→印刷要求をネットワーク経由で受け付ける場合のポート番号や、接続するクライアントのアクセス許可の設定等。  
+プリンタに関する情報などの設定 :: `/etc/cups/printers.conf`  
+設定ポート :: 631  
+→localhost:631でアクセス。  
+
+設定ファイルを直接編集。  
+WebブラウザでCUPSの設定ページにアクセスして編集する。  
+
+### CUPSの印刷処理の流れ
+
+1. アプリケーションや印刷コマンドから印刷データを受け取る。  
+   プリンタの設定オプションはPPDファイルから提供される。  
+2. スプーラーが印刷データを受付、スケジューリングを行う。  
+3. プリンタが直接受け付けられないデータを一旦中間形式としてPDFまたはPostScriptにフィルタで変換する。  
+4. PPDに定義されたフィルタにより、最終の印刷データに変換する。  
+5. 処理した印刷データをCUPSのバックエンドに送る。  
+6. バックエンドは印刷データをローカル接続(USBなど)またはネットワークを経由(IPPやLPRなど)してプリンタに渡す。  
+
+### CUPSサービスの起動
+
+SysVinitの場合  
+`/etc/init.d/cups start`  
+
+systemdの場合  
+`systemctl start cups.service`  
+
+IPPサービス(ポート631/tcp)が開いていれば、CUPSは動作している。  
+`netstat -at | grep ipp`  
+
+### lprコマンド
+
+印刷コマンド。  
+指定されたファイルや標準入力をプリントキューに送る。  
+
+``` txt
+lpr [オプション] [ファイル名]
+
+-# 部数 :: 印刷部数を指定する。
+-P プリンタ名 :: 印刷を行うプリンタを指定する。
+```
+
+テキストファイル testdata.txtを6部印刷する。  
+`lpr -# 6 testdata.txt`  
+
+/etc/passwdファイルを5部印刷する。  
+`lpr -# 5 /etc/passwd`  
+
+dmesgコマンドの出力を印刷する。  
+`dmesg | lpr`  
+
+### lpqコマンド
+
+プリントキューの内容を表示するコマンド。  
+オプションを指定せずにコマンドを実行した場合、デフォルトに設定されているプリンタのキューを表示する。  
+
+``` txt
+lpq [オプション] [ユーザー名] [ジョブ番号]
+
+-a :: すべてのプリンタの情報を表示。
+-P プリンタ名 :: 指定したプリンタの情報を表示。
+```
+
+### lprmコマンド
+
+プリンタキューにある印刷ジョブを削除するコマンド。  
+一般ユーザーは自分の発行した印刷要求のみ、スーパーユーザーはすべての印刷要求を削除できる。  
+
+``` txt
+lprm [オプション] [ジョブ番号]
+
+-P プリンタ名 :: 指定したプリンタの印刷ジョブを削除
+- :: 自分の印刷ジョブをすべて削除
+```
+
+自分の印刷ジョブを全て削除(一般)  
+`$ lprm -`  
+
+自分の印刷ジョブを全て削除(root)  
+`# lprm -`  
+
 ---
 
 ## 小豆本問題
 
 ---
 
-### 1
+### 1 ○
+
+cronを使って自動的にバックアップを取るようにしている。  
+バックアップファイル名にバックアップ日時が使われるにように死体場合、書式として適切なコマンドは？  
+
+→  
+D. ``tar czf /backup/date`date "+%Y%m%d"`.tar.gz /home``  
+
+すげー。当たった。  
+書式の設定はじめは「+」からだったような？ってのは合ってたみたいだ。  
+tarのコマンドは知らん。xは回答だから違うとしとvとfの違いがわからない。  
 
 ---
 
