htmlノウハウ、tarコマンド

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -653,6 +653,8 @@ D. ``tar czf /backup/date`date "+%Y%m%d"`.tar.gz /home``
 書式の設定はじめは「+」からだったような？ってのは合ってたみたいだ。  
 tarのコマンドは知らん。xは回答だから違うとしとvとfの違いがわからない。  
 
+cfz → create file zip  
+
 ---
 
 ### 2
