--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -235,3 +235,32 @@ Bourneシェル。
 bashの前身。  
 Stephen Bourne（スティーブ・ボーン）氏が1977年に開発した。  
 ゆえにBourneシェル  
+
+---
+
+## tarコマンド
+
+.tar形式に圧縮したり展開したりするコマンド。  
+複数ファイルを1つのファイルにまとめることをアーカイブと言う。  
+tarコマンドは[-]を省略できる。  
+
+``` txt
+tar [オプション] ファイル名
+
+-c :: アーカイブの作成
+-x :: アーカイブからファイルの取り出し
+-t :: アーカイブの内容の確認
+-f ファイル名 :: アーカイブファイル名の指定
+-z :: gzipによる圧縮・展開
+-j :: bzip2による圧縮・展開
+-J :: 7zipによる圧縮・展開
+-v :: 詳細な情報の表示
+-u :: アーカイブ内にある同じ名前のファイルより新しいものだけを追加
+-r :: アーカイブにファイルの追加
+-N :: 指定した日付より新しいデータのみを対象とする
+-M :: 複数デバイス得の分割
+-- delete :: アーカイブからファイルの削除
+```
+
+「aa」「bb」「cc」の3ファイルを1つにまとめて「hoge.tar」というアーカイブにしたい。
+`tar cf hoge.tar aa bb cc`
