--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -75,6 +75,18 @@
 読み方を忘れないために記録しただけなのだが、意味的にはエライややこしい。  
 乙が～甲が～って永遠と繰り返して雲にまくタイプの資料に出てくる奴だ。  
 
+## 小盛の読み方
+
+たぶん「こもり」  
+
+[「小盛」の読み方って？？](https://oshiete.goo.ne.jp/qa/1223481.html)  
+>推測なのですが、  
+>「大皿」「小皿」、「大声」「小声」、「大柄」「小柄」、「大雨」「小雨」のように、  
+>「大」を「おお」と読むときは「小」は「こ」と読み、  
+>「大吉」「小吉」、「大規模」「小規模」、「大腸」「小腸」のように  
+>「大」を「だい」と読むときは「小」は「しょう」と読むことが多いような気もします。（違う例があったらすみません）  
+>この方式でいくと、「大盛り」は「おおもり」なので「小盛り」は「こもり」になるのではないでしょうか。  
+
 ---
 
 ## 深謀遠慮(しんぼう-えんりょ)  
