--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -289,6 +289,13 @@ https://jp.blog.voicetube.com/phrases/fixed/
 c# object object 違い  
 [C#のStringとstring、Int32とint 違いは・・・ない！](https://araramistudio.jimdo.com/2019/03/06/c-%E3%81%AEstring%E3%81%A8string-int32%E3%81%A8int-%E9%81%95%E3%81%84%E3%81%AF-%E3%81%AA%E3%81%84/)
 
+java byte 符号なし 変換
+<https://www.delftstack.com/ja/howto/java/java-byte-to-int/>  
+
+符号ビット 見分け方
+符号あり、なしは何を持って判断しているのか。
+<https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q1057126335>
+
 ---
 
 ## 現在進行形
