--- a/HTML/ノウハウ.md
+++ b/HTML/ノウハウ.md
@@ -3,3 +3,7 @@
 ## HTMLの複数行を左揃え中央寄せする
 
 [HTMLの複数行を左揃え中央寄せする](https://atelierroi.com/tecnicalnote/htmlcss/html%E3%81%AE%E8%A4%87%E6%95%B0%E8%A1%8C%E3%82%92%E5%B7%A6%E6%8F%83%E3%81%88%E4%B8%AD%E5%A4%AE%E5%AF%84%E3%81%9B%E3%81%99%E3%82%8B/)  
+
+## 文字を中央寄せにする
+
+[左揃えの文字を横幅が自動的に伸縮する中央寄せにする3つの方法](https://www.acky.info/tips/css/00017.html)  
