--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -296,6 +296,11 @@ java byte 符号なし 変換
 符号あり、なしは何を持って判断しているのか。
 <https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q1057126335>
 
+
+<https://www.casleyconsulting.co.jp/blog/engineer/266/>
+
+vue デバッグ
+
 ---
 
 ## 現在進行形
