小豆本必須システムサービス完了

--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -657,32 +657,88 @@ cfz → create file zip
 
 ---
 
-### 2
+### 2 ○
+
+認証関連のメッセージで、プライオリティがnotice以上のものは/var/log/secureに保存されるようにしたい場合、/etc/rsyslog.confの書式として適切なものを選択せよ。  
+
+→  
+C.`authpriv.notice /var/log/secure`  
+
+ファシリティ.プライオリティ 出力先  
 
 ---
 
-### 3
+### 3 ○
+
+システムログファイル/var/log/messagesを常に監視して起き、新しいメッセージが書き込まれる様子を画面上でモニタリングし続けたい場合、  
+どのコマンドを実行すればよいか？  
+
+→  
+B. `tail -f /var/log/messages`  
+
+普通に考えて後に追加されたものを表示するからtailかなって思うけどね。  
+tailコマンドの-fオプションはファイルの末尾を表示し続け、新たに書き込みがあればリアルタイムに画面に表示する。  
 
 ---
 
-### 4
+### 4 ○
+
+Postfixを利用している。  
+root宛のメールをユーザーuser01で受け取れるように設定するため、/etc/aliasesファイルを編集しましたが、メールが届きません。  
+実行すべき操作は？  
+
+→  
+C.newaliasesコマンドを実行する。  
+
+意外と覚えているものである。  
 
 ---
 
-### 5
+### 5 ○
+
+jupitor.example.net上でstudentユーザーとして作業をしている。  
+student@jupitor.example.netに届いたメールを、student@lpic.jpに転送するには~/___に「student@lpic.jp」と記述します。  
+下線部のファイル名は？  
+
+→  
+.forward  
+
+覚えているものである。  
 
 ---
 
-### 6
+### 6 ○
+
+メールがメールキューに残っていないかを確認するためにあるコマンドを実行した。  
+`$____`
+mail queue is empty  
+
+コマンドは？  
+
+→  
+mailq  
+
+すげー。まじで覚えてるもんだな。  
 
 ---
 
-### 7
+### 7 ○
+
+lprコマンドを使い、プリンタlaser01で、/etc/hpstsファイルを5部印刷したい場合、どのコマンドを実行すればよいか？  
+
+→  
+`lpr -# 5 -P laser01 /etc/hosts`  
+なのでCですね。  
+親切なことに#が入ってるのが1つしかないので、実質正解みたいなものだ。  
 
 ---
 
-### 8
+### 8 ○
 
----
+プリントキューにある自分の印刷ジョブを全て削除したい場合、実行すべきコマンドは？  
 
-### 9
+→  
+lprm -  
+
+[-]は自分のジョブを消すオプションだったっけか。  
+昨日の今日とは言え、全問正解はすごくないか？  
